
== 0.0.2.2
* Added test cases and multiple column access through the [] operator on DataFrames

== 0.0.2.3
* Added #filter\_rows and #delete_row to DataFrame and changed #row to return a row containing a Hash of column name and value.
* Vector objects passed into a DataFrame are now duplicated so that any changes dont affect the original vector.
* Added an optional opts argument to DataFrame.
* Sending more fields than vectors in DataFrame will cause addition of nil vectors.
* Init a DataFrame without having to convert explicitly to vectors.

== 0.0.2.4
* Initialize dataframe from an array which looks like [{a: 10, b: 20}, {a: 11, b: 12}]. Works for parsed JSON.
* Over-riding vectors in DataFrame will still preserve order.
* Any re-assignment of rows in #each_row and #each_row_with_index will reflect in the DataFrame.
* Added #to_a and #to_json to DataFrame.

== 0.0.3
* This release is a complete rewrite of the entire gem to accomodate index values.

== 0.0.3.1
* Added aritmetic methods for vector aritmetic by taking the index of values into account.

== 0.0.4
* Added wrappers for Array, NMatrix and MDArray such that the external implementation is completely transparent of the data type being used internally.
* Added statistics methods for vectors for ArrayWrapper. These are compatible with statsample methods.
* Added plotting functions for DataFrame and Vector using Nyaplot.
* Create a DataFrame by specifying the rows with the ".rows" class method.
* Create a Vector from a Hash.
* Call a Vector element by specfying the index name as a method call (method_missing logic).
* Retrive multiple rows of a DataFrame by specfying a Range or an Array with multiple index names.
* #head and #tail for DataFrame.
* #uniq for Vector.
* #max for Vector can return a Vector object with the index set to the index of the max value.
* Tonnes of documentation for most methods.

== 0.0.5

* Easy accessors for some methods
* Faster CSV loading.